# glinit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glad/: CMakeLists.txt
shaders/: fragment.shader  vertex.shader
