cmake_minimum_required(VERSION 3.1)
project(glinit)

set(CMAKE_CXX_STANDARD 14)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
add_executable(glinit main.cpp)
add_subdirectory(glad/)
if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    target_link_libraries(glinit GL GLU glfw3 X11 Xxf86vm Xrandr pthread Xi Xinerama Xcursor glad dl)
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
    target_link_libraries(glinit glfw pthread glad dl "-framework OpenGL -framework GLUT")
else()
    message( FATAL_ERROR "This CMake file has been written for Linux and OSX only. CMake will exit." )
endif()
